src/test/resources/typeSystemTestModels/valid/interfaces/InterfaceNoFinalMethod.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.interfaces;

public interface InterfaceNoFinalMethod {

  public String getName(); //not final
}
